--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
     <!-- .slide>ul.inner-fade>li*3>a>img -->
     <div class="slide">
         <ul class="inner-fade">
-            <li><a href="#"><img src="/images/미션-라인타이포 로고 4종-01.svg" alt="logo1"></a></li>
-            <li><a href="#"><img src="/images/미션-라인타이포 로고 4종-02.svg" alt="logo2"></a></li>
-            <li><a href="#"><img src="/images/미션-라인타이포 로고 4종-03.svg" alt="logo3"></a></li>
+            <li><a href="#"><img src="/images/logo1.svg" alt="logo1"></a></li>
+            <li><a href="#"><img src="/images/logo2.svg" alt="logo2"></a></li>
+            <li><a href="#"><img src="/images/logo3.svg" alt="logo3"></a></li>
         </ul>
     </div>
 </body>
