--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         ul, li {margin: 0; padding: 0; list-style: none;}
        /* 스타일 잡는 위치 조정 */ .slide ul li a img {width: 500px; }
     </style>
-    <script src="/script/jquery-1.11.3.js"></script>
-    <script src="/script/jquery.innerfade.js"></script>
+    <script src="./script/jquery-1.11.3.js"></script>
+    <script src="./script/jquery.innerfade.js"></script>
     <script>
         /* jQuery 순서 맞춰주어야 오류x */
         
@@ -40,9 +40,9 @@
     <!-- .slide>ul.inner-fade>li*3>a>img -->
     <div class="slide">
         <ul class="inner-fade">
-            <li><a href="#"><img src="/images/logo1.svg" alt="logo1"></a></li>
-            <li><a href="#"><img src="/images/logo2.svg" alt="logo2"></a></li>
-            <li><a href="#"><img src="/images/logo3.svg" alt="logo3"></a></li>
+            <li><a href="#"><img src="./images/logo1.svg" alt="logo1"></a></li>
+            <li><a href="#"><img src="./images/logo2.svg" alt="logo2"></a></li>
+            <li><a href="#"><img src="./images/logo3.svg" alt="logo3"></a></li>
         </ul>
     </div>
 </body>
